; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_eth1394.c_ether1394_alloc_common_packet.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_eth1394.c_ether1394_alloc_common_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_packet = type { i32, i32, %struct.hpsb_host* }
%struct.hpsb_host = type { i32 }

@hpsb_async = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.hpsb_packet* (%struct.hpsb_host*)* @ether1394_alloc_common_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.hpsb_packet* @ether1394_alloc_common_packet(%struct.hpsb_host* %0) #0 {
  %2 = alloca %struct.hpsb_host*, align 8
  %3 = alloca %struct.hpsb_packet*, align 8
  store %struct.hpsb_host* %0, %struct.hpsb_host** %2, align 8
  %4 = call %struct.hpsb_packet* @hpsb_alloc_packet(i32 0)
  store %struct.hpsb_packet* %4, %struct.hpsb_packet** %3, align 8
  %5 = load %struct.hpsb_packet*, %struct.hpsb_packet** %3, align 8
  %6 = icmp ne %struct.hpsb_packet* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.hpsb_host*, %struct.hpsb_host** %2, align 8
  %9 = load %struct.hpsb_packet*, %struct.hpsb_packet** %3, align 8
  %10 = getelementptr inbounds %struct.hpsb_packet, %struct.hpsb_packet* %9, i32 0, i32 2
  store %struct.hpsb_host* %8, %struct.hpsb_host** %10, align 8
  %11 = load %struct.hpsb_host*, %struct.hpsb_host** %2, align 8
  %12 = call i32 @get_hpsb_generation(%struct.hpsb_host* %11)
  %13 = load %struct.hpsb_packet*, %struct.hpsb_packet** %3, align 8
  %14 = getelementptr inbounds %struct.hpsb_packet, %struct.hpsb_packet* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @hpsb_async, align 4
  %16 = load %struct.hpsb_packet*, %struct.hpsb_packet** %3, align 8
  %17 = getelementptr inbounds %struct.hpsb_packet, %struct.hpsb_packet* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  br label %18

18:                                               ; preds = %7, %1
  %19 = load %struct.hpsb_packet*, %struct.hpsb_packet** %3, align 8
  ret %struct.hpsb_packet* %19
}

declare dso_local %struct.hpsb_packet* @hpsb_alloc_packet(i32) #1

declare dso_local i32 @get_hpsb_generation(%struct.hpsb_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
